# Socket-Programming

./: CMakeLists.txt
Maintaining Data of IP and Port using UDP client server/: client.c  client_udp  connections.txt  server.c  server_udp
Message Checker using TCP Client server/: client  client.c  config.txt  server  server.c
src/: client.cpp
stream_with_udp/: CMakeLists.txt
stream_with_udp/src/: server.cpp
